--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,30 @@
     <groupId>org.example</groupId>
     <artifactId>romanNumbers</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.9.5</version>
+                <configuration>
+                    <targetClasses>
+                        <param>org.example.RomanNumber*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>org.example.RomanNumberTest*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -21,5 +40,6 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 
 </project>
