--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
                         <param>org.example.RomanNumberTest*</param>
                     </targetTests>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
